[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Menu/PauseMenu.gd" type="Script" id=1]

[node name="PauseMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.117647, 0.117647, 0.117647, 0.639216 )

[node name="CenterContainer" type="CenterContainer" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Background/CenterContainer"]
margin_left = 470.0
margin_top = 238.0
margin_right = 553.0
margin_bottom = 362.0

[node name="Label" type="Label" parent="Background/CenterContainer/VBoxContainer"]
margin_right = 83.0
margin_bottom = 14.0
text = "Paused"
align = 1

[node name="Spacer" type="Control" parent="Background/CenterContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 83.0
margin_bottom = 28.0
rect_min_size = Vector2( 0, 10 )

[node name="Sprite" type="Sprite" parent="Background/CenterContainer/VBoxContainer"]

[node name="Resume" type="Button" parent="Background/CenterContainer/VBoxContainer"]
margin_top = 32.0
margin_right = 83.0
margin_bottom = 52.0
text = "Resume"

[node name="MainMenu" type="Button" parent="Background/CenterContainer/VBoxContainer"]
margin_top = 56.0
margin_right = 83.0
margin_bottom = 76.0
text = "Main Menu"

[node name="Spacer2" type="Control" parent="Background/CenterContainer/VBoxContainer"]
margin_top = 80.0
margin_right = 83.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 20 )

[node name="Quit" type="Button" parent="Background/CenterContainer/VBoxContainer"]
margin_top = 104.0
margin_right = 83.0
margin_bottom = 124.0
text = "Quit"

[connection signal="button_down" from="Background/CenterContainer/VBoxContainer/Resume" to="." method="_on_Resume_button_down"]
[connection signal="button_down" from="Background/CenterContainer/VBoxContainer/MainMenu" to="." method="_on_MainMenu_button_down"]
[connection signal="button_down" from="Background/CenterContainer/VBoxContainer/Quit" to="." method="_on_Quit_button_down"]
